src/objects/AttachmentStatus__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentID__c</fullName>
        <label>AttachmentID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoanId</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>AttachmentStatus</relationshipLabel>
        <relationshipName>AttachmentStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uploaded_By__c</fullName>
        <label>Uploaded By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AttachmentStatus</label>
    <nameField>
        <label>Status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AttachmentStatus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>